# lar_ransac_example

./: README.md  pyproject.toml
.github/workflows/: static_code_analysis.yml
examples/: 01_fit_line.py  02_fit_multimodal.py  03_ransac.py  model_line.py
src/lar_ransac_example/: __init__.py  base_model.py  ransac.py
